DigicielFull/force-app/main/default/objects/amc__Holiday__c/amc__Holiday__c.object-meta.xml
<CustomObject>
    <description>Used to track Public and Resource related holidays</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>