DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>amc__Approval_Status__c</fullName>
    <inlineHelpText>Identifies whether this holiday / absence has been approved</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>