DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Approver__c</fullName>
    <formula>amc__Role__r.amc__Timesheet_Approver__r.amc__First_Name__c + &quot; &quot; + amc__Role__r.amc__Timesheet_Approver__r.amc__Last_Name__c</formula>
    <inlineHelpText>Identifies the person responsible for approving this Holiday (The Role&apos;s Timesheet Approver)</inlineHelpText>
    <label>Approver</label>
    <type>Text</type>
</CustomField>