DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Frequency__c.field-meta.xml
<CustomField>
    <fullName>amc__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amc__Frequency</valueSetName>
    </valueSet>
</CustomField>