DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Global_Holiday__c.field-meta.xml
<CustomField>
    <fullName>amc__Global_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Holiday is a Global Holiday that should be allocated to all Roles</inlineHelpText>
    <label>Global Holiday</label>
    <type>Checkbox</type>
</CustomField>