DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Hours_Taken__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Taken__c</fullName>
    <inlineHelpText>Identifies the total number of hours taken during this holiday / absence</inlineHelpText>
    <label>Hours Taken</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>