DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Manual_Allocation__c.field-meta.xml
<CustomField>
    <fullName>amc__Manual_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, denotes child Role Allocation Records are manually allocated.</inlineHelpText>
    <label>Manual Allocation</label>
    <type>Checkbox</type>
</CustomField>