DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Number_of_Recurrences__c.field-meta.xml
<CustomField>
    <fullName>amc__Number_of_Recurrences__c</fullName>
    <label>Number of Recurrences</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>