DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>amc__Rejection_Comments__c</fullName>
    <inlineHelpText>Identifies the reason this holiday / absence was rejected</inlineHelpText>
    <label>Rejection Comments</label>
    <type>TextArea</type>
</CustomField>