DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Role__c.field-meta.xml
<CustomField>
    <fullName>amc__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Holiday is for a specific Role, it can be added here.</description>
    <label>Role</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>