DigicielFull/force-app/main/default/objects/amc__Holiday__c/fields/amc__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>