DigicielFull/force-app/main/default/objects/amc__Holiday__c/validationRules/amc__Ensure_HA_Remaining_Sufficient.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_HA_Remaining_Sufficient</fullName>
    <active>true</active>
    <description>Ensure the Holiday Allowance &apos;Remaining&apos; is not less then the Holiday &apos;Days Taken&apos;</description>
    <errorConditionFormula>OR(
AND(ISNEW(),NOT(ISBLANK(amc__Holiday_Allowance__c)),amc__Holiday_Allowance__r.amc__Remaining__c &lt; amc__Days_Taken__c)
,
AND(NOT(ISBLANK(amc__Holiday_Allowance__c)), ISCHANGED(amc__Days_Taken__c),(amc__Holiday_Allowance__r.amc__Remaining__c + PRIORVALUE(amc__Days_Taken__c)) &lt; amc__Days_Taken__c)
)</errorConditionFormula>
    <errorMessage>The Holiday Allowance does not have sufficient days remaining for the number of days you&apos;re requesting</errorMessage>
</ValidationRule>