DigicielFull/force-app/main/default/objects/amc__Holiday__c/validationRules/amc__Ensure_Holiday_Allowance_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Holiday_Allowance_Specified</fullName>
    <active>false</active>
    <description>Ensure a Holiday Allowance record is specified</description>
    <errorConditionFormula>AND(
 ISBLANK(amc__Holiday_Allowance__c),
 NOT(
  ISBLANK(amc__Role__c)
 ),
 OR(
  ISPICKVAL(amc__Type__c, &quot;Annual Leave&quot;),
  ISPICKVAL(amc__Type__c, &quot;Sick Leave&quot;),
  ISPICKVAL(amc__Type__c, &quot;Study Leave&quot;)
 )
)</errorConditionFormula>
    <errorMessage>You must select a Holiday Allowance for this Holiday</errorMessage>
</ValidationRule>