DigicielFull/force-app/main/default/objects/amc__Holiday__c/listViews/amc__Holidays_Requiring_My_Approval.listView-meta.xml
<ListView>
    <fullName>amc__Holidays_Requiring_My_Approval</fullName>
    <columns>NAME</columns>
    <columns>amc__Role__c</columns>
    <columns>amc__Type__c</columns>
    <columns>amc__Start_Date__c</columns>
    <columns>amc__End_Date__c</columns>
    <columns>amc__Days_Taken__c</columns>
    <columns>amc__Hours_Taken__c</columns>
    <columns>amc__Approval_Status__c</columns>
    <columns>amc__Rejection_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>amc__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>amc__Approver_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Holidays Requiring My Approval</label>
</ListView>